# c2_ri

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml
crates/c2-config/: Cargo.toml
crates/c2-config/src/: lib.rs
crates/c2-core/: Cargo.toml
crates/c2-core/src/: classification.rs  domain.rs  error.rs  ids.rs  lib.rs  time.rs
crates/c2-ecs-wasm/: Cargo.toml
crates/c2-ecs-wasm/src/: lib.rs
crates/c2-geo/: Cargo.toml
crates/c2-geo/src/: lib.rs
crates/c2-identity/: Cargo.toml
crates/c2-identity/src/: lib.rs
crates/c2-messaging/: Cargo.toml
crates/c2-messaging/src/: lib.rs  zmq_transport.rs
crates/c2-observability/: Cargo.toml
crates/c2-observability/src/: lib.rs
crates/c2-policy/: Cargo.toml
crates/c2-policy/src/: lib.rs
crates/c2-proto/: Cargo.toml  build.rs
crates/c2-proto/proto/: mission.proto  task.proto
crates/c2-proto/src/: lib.rs
crates/c2-storage/: Cargo.toml
crates/c2-storage-postgres/: Cargo.toml
crates/c2-storage-postgres/migrations/: 0001_init.sql  0002_units_teams_capabilities.sql
crates/c2-storage-postgres/src/: lib.rs
crates/c2-storage-surreal/: Cargo.toml
crates/c2-storage-surreal/schema/: c2.surql
crates/c2-storage-surreal/src/: lib.rs
crates/c2-storage-timescale/: Cargo.toml
crates/c2-storage-timescale/src/: lib.rs
crates/c2-storage/src/: lib.rs
crates/egui-dock/: .cargo_vcs_info.json  Cargo.toml
crates/egui-dock/src/widgets/: mod.rs
crates/egui-dock/src/widgets/dock_area/: drag_and_drop.rs  mod.rs
crates/egui-dock/src/widgets/dock_area/show/: leaf.rs  mod.rs
docker/: Dockerfile  README.md
docs/: DEPLOYMENT.md  FEATURE_MATRIX.md  FRONTEND_SYSTEMS.md  LOCAL_SETUP.md  PROGRESS_LOG.md  PROJECT_PLAN.md  Steam DCS.md  harbor_oidc_setup.md
k8s/: README.md
k8s/argocd/: README.md  argocd-cm.yaml  argocd-ingress.yaml  argocd-rbac-cm.yaml  c2-dev.yaml  c2-prod.yaml  c2-staging.yaml  kustomization.yaml  project.yaml  secret.env.example
k8s/argocd/oidc/: README.md  bootstrap.sh
k8s/base/: c2cluster.yaml  default-serviceaccount.yaml  kustomization.yaml  namespace.yaml  operator.yaml
k8s/base/crd/: c2clusters.yaml
k8s/base/observability/: grafana.yaml  prometheus.yaml
k8s/charts/keycloak/: Chart.yaml  values.yaml
k8s/charts/keycloak/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/grafana/oidc/: README.md  bootstrap.sh
k8s/harbor/: README.md  values-dev.yaml
k8s/harbor/oidc/: README.md  bootstrap.sh
k8s/keycloak/: README.md  values-dev.yaml
k8s/keycloak/bootstrap/: README.md  bootstrap.sh
k8s/overlays/dev/: c2-web-weather.env.example  c2cluster-patch.yaml  grafana-oidc.env.example  ingress.yaml  kustomization.yaml  n8n-ollama-postgres.yaml  operator-patch.yaml  service-nodeport-patch.yaml  surrealdb.yaml
k8s/overlays/prod/: c2cluster-patch.yaml  operator-patch.yaml
k8s/overlays/staging/: c2cluster-patch.yaml  kustomization.yaml  operator-patch.yaml
scripts/: build-wasm.sh
services/c2-api/: Cargo.toml
services/c2-api/src/: auth.rs  main.rs  state.rs
services/c2-api/src/routes/: assets.rs  capabilities.rs  common.rs  health.rs  incidents.rs  mcp.rs  missions.rs  mod.rs  protobuf.rs  sse.rs  status.rs  tasks.rs  teams.rs  units.rs  ws.rs
services/c2-gateway/: Cargo.toml
services/c2-gateway/src/: main.rs  proxy.rs
services/c2-mcp/: Cargo.toml
services/c2-mcp/src/: main.rs
services/c2-native/: Cargo.toml
services/c2-native/src/: app.rs  ecs.rs  main.rs  tiles.rs  ui.rs
services/c2-native/src/renderer/: camera.rs  globe.rs  instance.rs  mod.rs  texture.rs
services/c2-native/src/renderer/shaders/: globe.wgsl  markers.wgsl  tiles.wgsl
services/c2-operator/: Cargo.toml
services/c2-operator/src/: lib.rs  main.rs
services/c2-web/: Cargo.toml
services/c2-web/src/: api.rs  flights.rs  main.rs  render.rs  satellites.rs  ships.rs  state.rs  tiles.rs
services/c2-web/src/routes/: flights.rs  health.rs  media.rs  mod.rs  partials.rs  satellites.rs  ships.rs  tiles.rs  ui.rs  ui_api.rs
services/c2-web/static/: c2-board.css  ui.js
services/c2-web/static/maps/: ATTRIBUTION.txt
services/c2-web/static/ui/: board.js  bus.js  config.js  controls.js  docks.js  dom.js  ecs.js  entity-utils.js  main.js  net.js  overlays.js  renderer.js  store.js  utils.js
services/c2-web/static/wasm/: README.md  c2-ecs-wasm.wasm
services/c2-web/templates/: index.html  layout.html
services/c2-web/templates/partials/: assets.html  incidents.html  mission_feed.html
services/c2-worker/: Cargo.toml
services/c2-worker/src/: main.rs
tests/hurl/: 00_health.hurl  01_missions.hurl  02_assets.hurl  03_incidents.hurl  04_tasks.hurl  05_protobuf.hurl  06_streams.hurl  07_mcp_http.hurl  08_capabilities.hurl  09_teams.hurl  10_units.hurl  90_seed_data.hurl  README.md  c2.env
