[package]
name = "c2-storage-surreal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.89"
c2-core = { version = "0.1.0", path = "../c2-core" }
c2-storage = { version = "0.1.0", path = "../c2-storage" }
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "2.4.0", features = ["protocol-ws", "protocol-http", "rustls", "kv-mem"] }
uuid = "1.19.0"
