[package]
name = "c2-storage-timescale"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.89"
c2-core = { version = "0.1.0", path = "../c2-core" }
c2-storage = { version = "0.1.0", path = "../c2-storage" }
c2-storage-postgres = { version = "0.1.0", path = "../c2-storage-postgres" }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
