[package]
name = "c2-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
c2-config = { version = "0.1.0", path = "../../crates/c2-config" }
c2-observability = { version = "0.1.0", path = "../../crates/c2-observability" }
pingora = { version = "0.6.0", features = ["proxy", "lb"] }
