[package]
name = "c2-native"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
bevy_ecs = "0.17.3"
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
egui_dock = "0.18.0"
glam = "0.30.9"
image = { version = "0.25.9", features = ["png"], default-features = false }
pollster = "0.4.0"
reqwest = { version = "0.12.28", features = ["blocking", "rustls-tls"] }
resvg = "0.45.1"
wgpu = "28.0.0"
winit = "0.30.12"
