[package]
name = "c2-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.9"
actix-web = { version = "4.12.1", features = ["macros"] }
actix-web-actors = "4.3.1"
c2-config = { version = "0.1.0", path = "../../crates/c2-config" }
c2-core = { version = "0.1.0", path = "../../crates/c2-core" }
c2-observability = { version = "0.1.0", path = "../../crates/c2-observability" }
futures-util = "0.3.31"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = { version = "1.20.1", features = ["builtins"] }
tracing = "0.1.44"
